Change root path and make app.php as a default front controller

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,10 +1,10 @@
 server {
     server_name localhost;
-    root /var/www/html/web;
+    root /srv/web;
 
     location / {
         # try to serve file directly, fallback to app.php
-        try_files $uri /app_dev.php$is_args$args;
+        try_files $uri /app.php$is_args$args;
     }
     # DEV
     # This rule should only be placed on your development environment
